<package format="2">
  <name>swri_geometry_util</name>
  <version>2.9.0</version>
  <description>

     swri_geometry_util

  </description>
  <author>Marc Alban</author>
  <maintainer email="malban@swri.org">Marc Alban</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_common</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>cv_bridge</depend>
  <depend>eigen</depend>
  <depend>libgeos++-dev</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>

  <test_depend>rostest</test_depend>
</package>
