<package format="3">
  <name>swri_image_util</name>
  <version>3.4.0</version>
  <description>

     swri_image_util

  </description>
  <author>Kris Kozak</author>
  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_common</url>
 
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>boost</depend>
  <depend>camera_calibration_parsers</depend>
  <depend>cv_bridge</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>swri_geometry_util</depend>
  <depend>swri_math_util</depend>
  <depend>swri_opencv_util</depend>
  <depend>swri_roscpp</depend>
  <depend>tf2</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

