<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swri_image_util</name>
  <version>3.8.3</version>
  <description>
    A package of commonly image manipulation utilities.
  </description>
  <author>Kris Kozak</author>
  <maintainer email="swri-robotics@swri.org">Southwest Research Institute</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_common</url>
 
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>camera_calibration_parsers</depend>
  <depend>cv_bridge</depend>
  <depend>eigen</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclpy</depend>
  <depend>swri_geometry_util</depend>
  <depend>swri_math_util</depend>
  <depend>swri_opencv_util</depend>
  <depend>tf2</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

